manifests/prod-k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #     - app.rayinaw.one
  #     - api.rayinaw.one
  #     - identity.rayinaw.one
  #   secretName: auction-app-tls
  rules:
  - host: app.rayinaw.one
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-clusterip
            port: 
              number: 80
  - host: api.rayinaw.one
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway-clusterip
            port: 
              number: 80
  - host: identity.rayinaw.one
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: identity-clusterip
            port: 
              number: 80
